[package]
name = "colorconverter"
version = "0.1.0"
authors = ["Markus Flür <fluer.markus@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
clap = "2.33.0"
yaml-rust = "0.4.3"
regex = "1.3.3"